# mklanlocal

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FIXES.md  LICENSE  PLAN_v1.8.md  README.md  addons.toml  gpt-1.8plan.txt
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_scan_cancelled.py  0003_users_and_roles.py  0004_v4_collections_and_tag_similarity.py  0005_curator_upload.py  0006_major_update_foundation.py  0007_visual_workflow.py  0008_asset_embedding.py  0009_share_links.py  0010_tag_vocabulary.py  0011_tag_suggestion_metadata.py  0012_v20_foundations.py  0013_v20_people_smart_albums.py  0014_increase_tag_length.py  0015_platform_modules.py  0016_addon_tools_foundation.py  0016_character_cards.py  0017_addon_tools_foundation.py  0017_enable_first_wave_addons.py  0018_enable_first_wave_addons.py
backend/src/media_indexer_backend/: main.py
backend/src/media_indexer_backend/addons/: __init__.py  image_utils.py  models.py  registry.py  schemas.py  service.py
backend/src/media_indexer_backend/api/: dependencies.py  router.py
backend/src/media_indexer_backend/api/routes/: addon_tools.py  admin.py  assets.py  auth.py  characters.py  collections.py  compare.py  export.py  inbox.py  modules.py  people.py  scan_jobs.py  search.py  shares.py  smart_albums.py  (+3 more)
backend/src/media_indexer_backend/core/: auth.py  config.py  logging.py  rate_limit.py
backend/src/media_indexer_backend/db/: session.py
backend/src/media_indexer_backend/models/: __init__.py  enums.py  tables.py
backend/src/media_indexer_backend/platform/: __init__.py  bootstrap.py  events.py  manifest.py  registry.py  runtime.py  service.py
backend/src/media_indexer_backend/schemas/: admin.py  asset.py  auth.py  character.py  clustering.py  collection.py  health.py  image_ops.py  inbox.py  integrations.py  maintenance.py  people.py  platform.py  scan_job.py  settings.py  shares.py  smart_album.py  source.py  tags.py
backend/src/media_indexer_backend/services/: annotation_service.py  api_token_service.py  asset_service.py  audit.py  backup_service.py  blurhash.py  character_cards.py  character_service.py  clip_embeddings.py  clip_service.py  clustering_service.py  collection_service.py  compare_service.py  curation_service.py  deepzoom.py  extractors.py  health_service.py  image_enrichment.py  image_service.py  inbox_service.py  maintenance_service.py  metadata.py  path_safety.py  people_service.py  scan_service.py  scheduler_service.py  search_reindex_service.py  settings_service.py  smart_album_service.py  source_service.py  tag_similarity_service.py  user_service.py  vips_image_service.py  webhook_service.py  workflow_export.py  workflow_extractor.py
backend/tests/: conftest.py  smoke_frontend_links.py  test_addon_manifest_registry.py  test_addon_processors.py  test_asset_service_preview_urls.py  test_character_cards.py  test_clustering_service.py  test_crop_routes.py  test_deepzoom.py  test_inbox_service_permissions.py  test_metadata.py  test_path_safety.py  test_permission_hardening.py  test_platform_module_registry.py  test_scan_jobs_routes.py  test_search_nl_sort.py  test_similarity_payloads.py  test_tag_suggestion_service.py  test_user_roles.py  test_vips_image_service.py
worker/: README.md  pyproject.toml
worker/src/media_indexer_worker/: main.py
worker/src/media_indexer_worker/services/: extractors.py  faces.py  nsfw.py  previews.py  scanner.py  similarity.py  tag_suggestions.py
(+122 files in other folders)
